# ROS_pointcloud_recolor

./: CMakeLists.txt  package.xml  setup.py
launch/: pointcloud_recolor.launch  rosmitnet_dense_stereo.launch
scripts/: pointcloud_recolor.py
src/: pointcloud_recolor.cpp
